Fix footer not showing

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,7 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 220px);
 }
 
 .main-of-menu {
@@ -95,7 +95,7 @@ main {
     column-gap: 10px;
     row-gap: 20px;
     margin-top: 20px;
-    height: calc(100% - 100px);
+    height: calc(100% - 130px);
 }
 
 .main-about-us {
@@ -148,7 +148,7 @@ main {
 }
 
 footer {
-    margin-top: 50px;
+    margin-top: 20px;
     height: 20px;
     font-family: var(--font-secondary);
     font-size: 0.625rem;
